<resources>
    <string name="app_name">MvvmDemo</string>

    <string name="action_home">Home</string>
    <string name="action_system">System</string>
    <string name="action_view">Official</string>
    <string name="action_navigation">Navigation</string>
    <string name="action_me">Me</string>

    <string name="toast_double_click_to_exit">Click exit again~</string>

    <string name="no_data">No date</string>
    <string name="loading_again">Reload</string>

    <string name="cut_line">/</string>
</resources>
