<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mymodulesdemo.com.example.ui.main.MainActivity">

    <item
        android:id="@+id/action_home"
        android:orderInCategory="0"
        android:title="@string/action_home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/action_system"
        android:orderInCategory="1"
        android:title="@string/action_navigation"
        android:icon="@drawable/ic_navigation"/>

    <item
        android:id="@+id/action_view"
        android:orderInCategory="2"
        android:title="@string/action_view"
        android:icon="@drawable/ic_view"/>

    <item
        android:id="@+id/action_navigation"
        android:orderInCategory="3"
        android:title="@string/action_system"
        android:icon="@drawable/ic_system"/>

    <item
        android:id="@+id/action_me"
        android:orderInCategory="4"
        android:title="@string/action_me"
        android:icon="@drawable/ic_me"/>
</menu>
